force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/APD_Application__c.object-meta.xml
<CustomObject>
    <description>Master object for tracking Application for Permit to Drill (APD) submissions and processing within the Department of Interior permit management system. Manages the complete lifecycle from application submission through approval or denial.</description>
    <label>APD Application</label>
    <nameField>
        <displayFormat>APD-{000000000}</displayFormat>
        <label>APD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APD Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>