force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>Unique identifier for the APD application as assigned by the operator or system. Must follow DOI application numbering standards.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the unique application number for this APD. This number will be used for tracking and correspondence.</inlineHelpText>
    <label>Application Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>