force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Assigned_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary BLM specialist assigned to review and process this APD application.</description>
    <inlineHelpText>The BLM specialist responsible for the primary review of this application.</inlineHelpText>
    <label>Assigned Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APD_Applications_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>