force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/BLM_Field_Office__c.field-meta.xml
<CustomField>
    <fullName>BLM_Field_Office__c</fullName>
    <description>The Bureau of Land Management field office with jurisdiction over the proposed drilling location.</description>
    <inlineHelpText>Select the BLM field office responsible for reviewing this APD based on the drilling location.</inlineHelpText>
    <label>BLM Field Office</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakersfield Field Office</fullName>
            </value>
            <value>
                <fullName>Buffalo Field Office</fullName>
            </value>
            <value>
                <fullName>Carlsbad Field Office</fullName>
            </value>
            <value>
                <fullName>Casper Field Office</fullName>
            </value>
            <value>
                <fullName>Colorado River Valley Field Office</fullName>
            </value>
            <value>
                <fullName>Grand Junction Field Office</fullName>
            </value>
            <value>
                <fullName>Little Snake Field Office</fullName>
            </value>
            <value>
                <fullName>Miles City Field Office</fullName>
            </value>
            <value>
                <fullName>Rawlins Field Office</fullName>
            </value>
            <value>
                <fullName>White River Field Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>