force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Bond_Number__c.field-meta.xml
<CustomField>
    <fullName>Bond_Number__c</fullName>
    <description>Federal or state well bond number</description>
    <label>Bond Number(s)</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>