force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Bond_Type__c.field-meta.xml
<CustomField>
    <fullName>Bond_Type__c</fullName>
    <description>Type of well bond coverage</description>
    <label>Bond Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Statewide</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Individual Well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>