force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County where the well will be located</description>
    <inlineHelpText>Enter the county name where drilling operations will take place</inlineHelpText>
    <label>County</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>