force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date when the final decision (approval, denial, or conditional approval) was made on the APD application.</description>
    <inlineHelpText>The date the final decision was made on this application. Automatically populated when status changes to approved, denied, or conditionally approved.</inlineHelpText>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>