force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Elevation_MSL__c.field-meta.xml
<CustomField>
    <fullName>Elevation_MSL__c</fullName>
    <label>Elevation (MSL)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Ground elevation at well site in feet above mean sea level</description>
    <inlineHelpText>Enter elevation in feet above mean sea level (e.g., 5280.50)</inlineHelpText>
</CustomField>