force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Expected_Spud_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Spud_Date__c</fullName>
    <description>Anticipated date when drilling operations will commence (spud date) as proposed by the operator.</description>
    <inlineHelpText>Enter the expected date drilling will begin. This helps prioritize review scheduling and resource allocation.</inlineHelpText>
    <label>Expected Spud Date</label>
    <type>Date</type>
</CustomField>