force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <defaultValue>12515</defaultValue>
    <description>Required processing fee for the APD application as mandated by federal regulations. Standard fee is $12,515 unless exempted or modified by special circumstances.</description>
    <inlineHelpText>Standard APD processing fee is $12,515. This may be modified based on application type or special circumstances.</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>