force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude coordinate of the well location in decimal degrees</description>
    <inlineHelpText>Enter latitude in decimal degrees (e.g., 40.12345678). Use NAD 83 datum.</inlineHelpText>
    <label>Latitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>