force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <externalId>true</externalId>
    <label>Lease Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <description>Official lease number for the property where drilling will occur</description>
    <inlineHelpText>Enter the official lease number as shown on lease documents (e.g., MTM-12345)</inlineHelpText>
</CustomField>