force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Tribal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of lease under which the drilling will occur - Federal, State, Fee, or Tribal</description>
    <inlineHelpText>Select the type of lease where drilling operations will take place as specified in Form 3160-3 Section 2</inlineHelpText>
</CustomField>