force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Longitude coordinate of the well location in decimal degrees</description>
    <inlineHelpText>Enter longitude in decimal degrees (e.g., -104.12345678). Use NAD 83 datum.</inlineHelpText>
    <label>Longitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>