force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Meridian__c.field-meta.xml
<CustomField>
    <fullName>Meridian__c</fullName>
    <label>Meridian</label>
    <length>100</length>
    <type>Text</type>
    <description>Principal meridian for township/range survey system</description>
    <inlineHelpText>Enter the principal meridian (e.g., Principal Meridian, Sixth Principal Meridian)</inlineHelpText>
</CustomField>