force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/NEPA_Required__c.field-meta.xml
<CustomField>
    <fullName>NEPA_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether National Environmental Policy Act (NEPA) compliance review is required for this APD application.</description>
    <inlineHelpText>Most APD applications require NEPA review. Uncheck only if a categorical exclusion applies.</inlineHelpText>
    <label>NEPA Required</label>
    <type>Checkbox</type>
</CustomField>