force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The oil and gas operator company responsible for this APD application and subsequent drilling operations.</description>
    <inlineHelpText>Select the operator company that is submitting this APD application.</inlineHelpText>
    <label>Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APD Applications</relationshipLabel>
    <relationshipName>APD_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>