force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <description>Processing priority level for the APD application based on application type, emergency status, or special circumstances.</description>
    <inlineHelpText>Indicates the processing priority. Emergency APDs receive highest priority, followed by expedited applications.</inlineHelpText>
    <label>Priority Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>