force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range</label>
    <length>100</length>
    <type>Text</type>
    <description>Range designation in the Public Land Survey System</description>
    <inlineHelpText>Enter range (e.g., R1W, R25E). Include direction (E/W)</inlineHelpText>
</CustomField>