force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Section number and subdivision in the Public Land Survey System</description>
    <inlineHelpText>Enter section and subdivision (e.g., Section 16, SW1/4 NE1/4)</inlineHelpText>
    <label>Section</label>
    <length>100</length>
    <type>Text</type>
</CustomField>