force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date when the APD application was formally submitted to the Bureau of Land Management for review.</description>
    <inlineHelpText>Enter the date this application was submitted to BLM. This date is used for processing timeline calculations.</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>