force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Township__c.field-meta.xml
<CustomField>
    <fullName>Township__c</fullName>
    <label>Township</label>
    <length>100</length>
    <type>Text</type>
    <description>Township designation in the Public Land Survey System</description>
    <inlineHelpText>Enter township (e.g., T1N, T15S). Include direction (N/S)</inlineHelpText>
</CustomField>