force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Unit_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Agreement_Number__c</fullName>
    <description>Unit agreement number if the lease is part of a unitized development</description>
    <inlineHelpText>Enter unit agreement number if applicable (required for unitized developments)</inlineHelpText>
    <label>Unit Agreement Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>