force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Well_Type__c.field-meta.xml
<CustomField>
    <fullName>Well_Type__c</fullName>
    <description>Classification of the proposed well based on drilling technique and resource extraction method.</description>
    <inlineHelpText>Select the type of well being proposed for this APD application.</inlineHelpText>
    <label>Well Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Directional</fullName>
            </value>
            <value>
                <fullName>Multi-lateral</fullName>
            </value>
            <value>
                <fullName>Re-entry</fullName>
            </value>
            <value>
                <fullName>Sidetrack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>