force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/fields/Will_Produce_From_Lease__c.field-meta.xml
<CustomField>
    <fullName>Will_Produce_From_Lease__c</fullName>
    <label>Will Produce From Lease</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>Indicates if the well will produce from the lease being applied for</description>
    <inlineHelpText>Check if this well will produce from the lease specified in this APD application</inlineHelpText>
</CustomField>