force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/recordTypes/Emergency_APD.recordType-meta.xml
<RecordType>
    <fullName>Emergency_APD</fullName>
    <active>true</active>
    <description>Emergency APD applications requiring immediate processing (typically 1-5 days). Reserved for situations involving imminent safety hazards, environmental threats, or critical infrastructure needs.</description>
    <label>Emergency APD</label>
</RecordType>