force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/recordTypes/Expedited_APD.recordType-meta.xml
<RecordType>
    <fullName>Expedited_APD</fullName>
    <active>true</active>
    <description>Expedited APD applications with accelerated processing timelines (typically 10-20 days). Used when operator has demonstrated time-sensitive business need.</description>
    <label>Expedited APD</label>
</RecordType>