force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/recordTypes/Standard_APD.recordType-meta.xml
<RecordType>
    <fullName>Standard_APD</fullName>
    <active>true</active>
    <description>Standard APD applications following normal processing timelines (typically 30-60 days). Used for routine drilling operations without time-sensitive constraints.</description>
    <label>Standard APD</label>
</RecordType>