force-app/main/Government_Documents/Permit_And_Licensing/objects/APD_Application__c/validationRules/Decision_Date_Required_When_Status_Final.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Date_Required_When_Status_Final</fullName>
    <active>true</active>
    <description>Ensures that a Decision Date is entered when the application status is set to a final status (Approved, Approved with Conditions, or Denied).</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, &quot;Approved&quot;),
        ISPICKVAL(Status__c, &quot;Approved with Conditions&quot;), 
        ISPICKVAL(Status__c, &quot;Denied&quot;)
    ),
    ISBLANK(Decision_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Decision_Date__c</errorDisplayField>
    <errorMessage>Decision Date is required when status is set to Approved, Approved with Conditions, or Denied.</errorMessage>
</ValidationRule>